--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@reduxjs/toolkit": "^2.9.1",
     "axios": "^1.11.0",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
-    "zod": "^4.1.5",
-    "zustand": "^5.0.8"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
