--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "dev:all": "concurrently -n FRONT,BACK -c magenta,green \"npm:dev\" \"npm:dev:api\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-gen": "npx supabase gen types typescript --project-id \"cqgssdqwljltbcginxsl\" --schema public > src/database.types.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-visually-hidden": "^1.2.4",
     "@reduxjs/toolkit": "^2.9.2",
     "@tanstack/react-query": "^5.90.5",
