--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-visually-hidden": "^1.2.4",
     "@reduxjs/toolkit": "^2.9.2",
+    "@supabase/supabase-js": "^2.80.0",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
