--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "intersection-observer": "^0.12.2",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
+    "react-intersection-observer": "^10.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "sonner": "^2.0.7",
